[package]
name = "astrodynamics_native"
version = "0.6.0"
authors = []
edition = "2021"
description = "Rustler NIF wrapper for the astrodynamics Rust crate"
license = "MIT"

[lib]
name = "astrodynamics_native"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.3", default-features = false, features = ["derive"] }
astrodynamics = "0.6.0"
nalgebra = "0.33"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
